# Hackthon_book

./: .mcp.json  README.md  docusaurus.config.ts  sidebars.ts
 srv/: SafetyCheck.srv
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  cohere_client.py  config.py  docker-compose.yml  document_chunker.py  example_url_ingestion.py  index_documents.py  install_deps.py  main.py  postgres_client.py  pyproject.toml  rag_engine.py  requirements.txt  safety_checker.py  schema.sql  selected_text_processor.py  single_file_ingestion.py  startup.sh  test_chunker.py  test_main_functionality.py  url_chunker.py  url_ingestion_pipeline.md  url_ingestor.py  vector_client.py  web_scraper.py
docs/: getting-started.md  hardware-requirements.md  index.md  overview.md  prerequisites.md
docs/module1-ros2/: architecture.md  humanoid-context.md  index.md  labs.md  launch-files-parameters.md  nodes-topics-services-actions.md  urdf-primer.md  (+2 more)
humanoid-robotics-book/: package-lock.json
launch/: vla_system.launch.py
msg/: ActionPlan.msg  Intent.msg  SceneGraph.msg  SocialBehavior.msg  SpeechCommand.msg  VLAAction.msg
src/: context_manager.py  feedback_generator.py  intent_interpreter.py  language_understanding.py  manipulation_executor.py  navigation_executor.py  perception_integrator.py  safety_validator.py  social_behavior_executor.py  speech_processor.py  vla_main.py
test/: integration_tests.py  test_vla_components.py
(+80 files in other folders)
